# HH_Superjob_Parser

./: .gitignore  README.md  main.py  pyproject.toml
api/: api_requests.py
db_func/: db_config.py  db_manipulation_func.py
search_func/: hh_search_func.py  search_navigation.py  set_search_params.py  superjob_search_func.py
search_params/: hh_search_params.py  superjob_search_params.py
