[tool.poetry]
name = "hh-superjob-parser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hh_superjob_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2 = "^2.9.6"
forex-python = "^1.8"
pylint = "^2.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
